@@ -11,7 +11,6 @@ import com.sun.tools.attach.VirtualMachine;
 import java.io.*;
 import java.lang.instrument.Instrumentation;
 import java.lang.management.ManagementFactory;
-import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
 import java.util.List;
@@ -29,7 +28,6 @@ import java.util.jar.JarFile;
  * Licence: Apache v2 License
  */
 public class TEnv {
-
 	/**
 	 * 获取当前进程 PID
 	 * @return 当前进程 ID
@@ -203,74 +201,6 @@ public class TEnv {
 	}
 
 	/**
-	 * 获取指定的 Class 的 URLClassLoader
-	 * 		如果指定的 Class 不是使用 URLClassLoader 加载的
-	 * 		则使用 ClassLoader.getSystemClassLoader()获取 JVM 的 ClassLoader
-	 * @param clazz Class 对象
-	 * @return URLClassLoader对象
-	 */
-	public static URLClassLoader getURLClassLoader(Class clazz){
-		if(clazz == null){
-			clazz = TEnv.class;
-		}
-
-		URLClassLoader urlClassLoader = null;
-		ClassLoader currentClassLoader = clazz.getClassLoader();
-		if(currentClassLoader instanceof URLClassLoader){
-			urlClassLoader = (URLClassLoader)currentClassLoader;
-		} else {
-			urlClassLoader = (URLClassLoader)ClassLoader.getSystemClassLoader();
-		}
-
-		return urlClassLoader;
-	}
-
-
-	/**
-	 * 为JVM加载一个jar包, 一个目录内的所有 jar 包 或者一个目录到 classpath
-	 * @param file 文件路径
-	 * @throws SecurityException  安全性异常
-	 * @throws NoSuchMethodException  无方法异常
-	 * @throws IOException IO异常
-	 */
-	public static void addClassPath(File file) throws NoSuchMethodException, SecurityException, IOException {
-		if(!file.exists()){
-			Logger.simple("[WARN] Method loadBinary, This ["+file.getCanonicalPath()+"] is not exists");
-		}
-
-		URLClassLoader urlClassLoader = getURLClassLoader(null);
-
-		try {
-			if (file.isDirectory()) {
-				List<File> subfiles = TFile.scanFile(file, "\\.jar$");
-				if(subfiles.size()>0){
-					for(File subFile :subfiles) {
-						addClassPath(subFile);
-					}
-				}else{
-					TReflect.invokeMethod(urlClassLoader, "addURL", file.toURI().toURL());
-				}
-			}else if(file.getPath().toLowerCase().endsWith(".jar")){
-				TReflect.invokeMethod(urlClassLoader, "addURL", file.toURI().toURL());
-			}
-		} catch (IOException | ReflectiveOperationException e) {
-			Logger.error("Load jar or class failed",e);
-		}
-	}
-
-	/**
-	 * 为JVM加载一个jar包 或者一个目录到 classpath
-	 * @param filePath  文件路径
-	 * @throws NoSuchMethodException 异常信息
-	 * @throws IOException 异常信息
-	 */
-	public static void addClassPath(String filePath) throws NoSuchMethodException, IOException {
-		File file = new File(filePath);
-		addClassPath(file);
-	}
-
-
-	/**
 	 * 从当前进程的ClassPath中寻找 Class
 	 * @param pattern  确认匹配的正则表达式
 	 * @param filters  过滤的 class, 满足这些条件的 class 才会被搜索到(注解,接口,继承的类)
@@ -440,8 +370,8 @@ public class TEnv {
 		//去除 javahome 的最后一个路径节点,扩大搜索范文
 		javaHome = javaHome.replaceAll("\\/[a-zA-z0-9\\_\\$]*$","");
 
-		for(URL url : getURLClassLoader(null).getURLs()){
-			String classPath = url.getPath();
+		String[] classPaths = System.getProperty("java.class.path").split(File.pathSeparator);
+		for(String classPath : classPaths){
 			if(!classPath.startsWith(javaHome)){
 				userClassPath.add(classPath);
 			}
@@ -470,7 +400,6 @@ public class TEnv {
 	 */
 	public static Class resourceToClass(String resourcePath) throws ClassNotFoundException {
 		String className = null;
-		URLClassLoader urlClassLoader = getURLClassLoader(null);
 
 		if(resourcePath.startsWith(File.separator)){
 			resourcePath = TString.removePrefix(resourcePath);
@@ -536,10 +465,18 @@ public class TEnv {
 				throw new FileNotFoundException("The agent jar file not found");
 			}
 		}
-		VirtualMachine vm = VirtualMachine.attach(Long.toString(TEnv.getCurrentPID()));
-		vm.loadAgent(agentJarPath);
-		Instrumentation instrumentation = DynamicAgent.getInstrumentation();
-		vm.detach();
-		return instrumentation;
+
+		try {
+			VirtualMachine vm = VirtualMachine.attach(Long.toString(TEnv.getCurrentPID()));
+			vm.loadAgent(agentJarPath);
+			Instrumentation instrumentation = DynamicAgent.getInstrumentation();
+			vm.detach();
+			return instrumentation;
+		} catch(IOException e) {
+			if(e.getMessage().contains("attach to current VM")) {
+				e = new IOException("please use -Djdk.attach.allowAttachSelf=true with java command.", e);
+			}
+			throw e;
+		}
 	}
 }
